kubernetes/apps/nzbhydra2/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbhydra2-ingress
  namespace: media
  labels:
    app: nzbhydra2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  rules:
  - host: nzbhydra.sargeant.co
    http:
      paths:
      - backend:
          service:
            name: nzbhydra2
            port:
              number: 5076
        path: /
        pathType: Prefix
  - host: nzbhydra.sargeant.local
    http:
      paths:
      - backend:
          service:
            name: nzbhydra2
            port:
              number: 5076
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nzbhydra.sargeant.co
    secretName: nzbhydra2-tls
